--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">E-Commerce Something Project Name</h1>
+          <h1 class="title is-1 publication-title">A Fancy Project Title</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               Utku Ozbulak<sup>1</sup> and
             </span>
             <span class="author-block">
-              Han Ozbulak<sup>1</sup>
+              Hong Gildong<sup>1</sup>
             </span>
           </div>
 
@@ -50,7 +50,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
-          <p> New abstract. </p>
+          <p> This is a template AI-generated text. This section contains a comprehensive introduction to the project's core ideas and motivations. It presents the reader with an engaging overview of what the work is about, why it matters, and how it fits into the broader field. The text here outlines the key problem being addressed, highlights the opportunities and challenges, and sets the stage for the detailed developments in the following sections. It provides context by summarizing prior work or commonly encountered limitations, and articulates the unique contributions or novel approaches proposed. The narrative also emphasizes the potential impact of the project, both theoretically and practically, and may hint at empirical results or illustrative examples that will come later. By the end of this section, the reader should have a clear mental roadmap of what to expect: the objectives, the methodology, and the significance of the outcomes. </p>
         </div>
       </div>
     </div>
