--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">A Fancy Project Title</h1>
+          <h1 class="title is-1 publication-title">FIM Classification Analysis</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              Utku Ozbulak<sup>1</sup> and
+              Seunga Ha<sup>1</sup> and
             </span>
             <span class="author-block">
-              Hong Gildong<sup>1</sup>
+              Handeul Choi<sup>1</sup>
             </span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>George Mason University Korea</span>
+            <span class="author-block"><sup>1</sup>Ghent University Global Campus</span>
           </div>
 
         </div>
@@ -50,7 +50,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
-          <p> This is a template AI-generated text. This section contains a comprehensive introduction to the project's core ideas and motivations. It presents the reader with an engaging overview of what the work is about, why it matters, and how it fits into the broader field. The text here outlines the key problem being addressed, highlights the opportunities and challenges, and sets the stage for the detailed developments in the following sections. It provides context by summarizing prior work or commonly encountered limitations, and articulates the unique contributions or novel approaches proposed. The narrative also emphasizes the potential impact of the project, both theoretically and practically, and may hint at empirical results or illustrative examples that will come later. By the end of this section, the reader should have a clear mental roadmap of what to expect: the objectives, the methodology, and the significance of the outcomes. </p>
+          <p> This project focuses on understanding and optimizing model behavior for protein particle classification through systematic experimentation. Instead of treating performance as a single numeric outcome, we emphasize comparative trends across training configurations and particle classes to better understand how model decisions emerge.
         </div>
       </div>
     </div>
@@ -59,7 +59,7 @@
 
 <section class="section">
   <div class="container is-max-desktop">
-<h2 class="title is-3 has-text-centered">A Catchy Title for the First Section</h2>
+<h2 class="title is-3 has-text-centered">Model and Training</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt lectus quis libero interdum, non facilisis sapien aliquet. Sed sit amet ex hendrerit, dignissim purus sit amet, blandit est. Integer nec mauris at dolor egestas volutpat. Quisque efficitur metus vitae dolor fermentum, quis varius neque consectetur.
       </p>
