--- a/index.html
+++ b/index.html
@@ -61,126 +61,150 @@
   <div class="container is-max-desktop">
 <h2 class="title is-3 has-text-centered">Model and Training</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt lectus quis libero interdum, non facilisis sapien aliquet. Sed sit amet ex hendrerit, dignissim purus sit amet, blandit est. Integer nec mauris at dolor egestas volutpat. Quisque efficitur metus vitae dolor fermentum, quis varius neque consectetur.
-      </p>
-    <figure class="image has-text-centered">
-        <img src="./static/images/Template_bar.png"
-       alt="Playfair 1801 chart"
-       class="img-small75"
-       style="display: inline-block; width: 75%; height: auto;">
-      <figcaption class="is-size-6 has-text-grey">
-        Figure 1. Visual representation of the project’s workflow using the template bar.
-      </figcaption>
-    </figure>
-    <div class="content has-text-justified">
-      <p>
-        Curabitur suscipit urna ut felis vulputate, nec dictum orci vehicula. Mauris aliquet, nunc et dignissim tincidunt, urna est tempus lacus, ut suscipit ex tellus a ipsum. Donec pretium tempor justo vitae molestie. Fusce ullamcorper leo id purus sodales, at cursus felis lacinia. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-      </p>
-    </div>
-  </div>
-</section>
 
-  <section class="section">
-  <div class="container is-max-desktop">
-<h2 class="title is-3 has-text-centered">A Catchy Title for the First Section</h2>
+
+    <!-- Model & Training -->
+    <h2 class="title is-3 has-text-centered">Model &amp; Training</h2>
+
+    <div style="margin-top: 3rem;"></div>
+
+    <!-- Task Overview -->
+    <div class="content has-text-justified readable-content">
+      <h3 class="title is-4">Task Overview</h3>
+
+      <div style="margin-top: 1.5rem;"></div>
+
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt lectus quis libero interdum, non facilisis sapien aliquet. Sed sit amet ex hendrerit, dignissim purus sit amet, blandit est. Integer nec mauris at dolor egestas volutpat. Quisque efficitur metus vitae dolor fermentum, quis varius neque consectetur.
-      </p>
-    <div class="content has-text-justified">
-      <p>
-        Curabitur suscipit urna ut felis vulputate, nec dictum orci vehicula. Mauris aliquet, nunc et dignissim tincidunt, urna est tempus lacus, ut suscipit ex tellus a ipsum. Donec pretium tempor justo vitae molestie. Fusce ullamcorper leo id purus sodales, at cursus felis lacinia. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+        This task focuses on optimizing a deep learning model for classifying protein particles into ten categories (mAb1–mAb10) by analyzing approximately 15 experimental sets with varying normalization and transformation protocols. To address the inherent challenge of high inter-class similarity, the dataset was rigorously partitioned and trained using dynamic augmentations to ensure robust feature extraction and generalization. Performance is evaluated through macro-averaged F1-score, precision, and recall, while heatmaps are utilized to visually confirm that the model identifies the correct morphological characteristics for classification.
       </p>
     </div>
-  </div>
-</section>
+
+    <div style="margin-top: 3.5rem;"></div>
+
+    <!-- Optimization Section -->
+    <div class="content has-text-justified readable-content">
+
+      <h4 class="title is-5">
+        Optimization of Model Configuration for Protein Particle Classification
+      </h4>
+
+      <div style="margin-top: 1.5rem;"></div>
+
+      <p>
+        To identify an effective configuration for protein particle classification,
+        we conducted a comprehensive evaluation of approximately fifteen distinct experimental setups.
+        Each setup was carefully designed by varying image normalization strategies,
+        transformation pipelines, and training configurations in order to isolate
+        the impact of individual design choices.
+      </p>
+
+      <p>
+        Rather than relying solely on global performance averages,
+        the selection process was guided by a holistic analysis of class-wise behavior.
+        Classification performance was examined independently for each antibody class
+        (mAb1 through mAb10), allowing us to compare relative trends in confidence,
+        stability, and consistency across configurations.
+      </p>
+
+      <p>
+        The most effective configuration demonstrated consistently strong behavior
+        across all major evaluation criteria.
+        This outcome is particularly notable given the intrinsic inter-class similarity
+        of protein particles.
+        The success of this configuration is primarily attributed to a training strategy
+        that emphasized spatial diversity through variations in image size and orientation.
+      </p>
+
+      <p>
+        By exposing the model to these controlled spatial transformations,
+        the training process encouraged the development of more generalized feature representations,
+        enabling reliable classification across diverse particle morphologies.
+        The resulting focus of the model is further illustrated through qualitative visualization,
+        such as class-wise heatmaps.
+      </p>
+
+<div style="margin-top: 2.5rem;"></div>
+
+<figure class="image has-text-centered">
+  <img src="./static/images/heatmap.png"
+       alt="Class-wise model response heatmap"
+       style="width: 70%; height: auto;">
+
+  <figcaption class="is-size-6 has-text-grey" style="margin-top: 0.75rem;">
+    Figure 1: This heatmap illustrates the percentages of correct classifications for the ten protein particle classes (mAb1–mAb10) achieved in the best test set.
+  </figcaption>
+</figure>
+
+
+    </div>
+
+    <div style="margin-top: 2.5rem;"></div>
+
+    <!-- Key Observations -->
+    <div class="content has-text-justified readable-content">
+      <h4 class="title is-5">Key Observations from Model Evaluation</h4>
+
+      <div style="margin-top: 1.5rem;"></div>
+
+      <p>
+        Analysis of the best-performing configuration revealed a consistent hierarchy
+        in class-level behavior.
+        Certain antibody classes demonstrated comparatively stronger and more stable responses,
+        while others repeatedly exhibited weaker performance trends.
+        This pattern was observed not only in the optimal configuration,
+        but also as a general tendency across the majority of experimental setups.
+      </p>
+
+      <p>
+        These observations suggest that model difficulty is not uniformly distributed across classes.
+        Instead, specific antibody categories present persistent challenges that are
+        resistant to changes in training configuration.
+        Such consistency highlights the importance of class-aware analysis
+        when evaluating model behavior.
+      </p>
+
+      <p>
+        The effectiveness of the strongest configuration can be largely attributed
+        to its preprocessing pipeline, which combined random resizing,
+        background unification, and orientation perturbations.
+        These factors appear to play a decisive role in guiding the model
+        toward learning discriminative and transferable visual features.
+      </p>
+    </div>
+
+    <div style="margin-top: 4.0rem;"></div>
+
+    <div class="content has-text-justified readable-content">
+      <h4 class="title is-5">Section B</h4>
+
+      <div style="margin-top: 1.5rem;"></div>
+
+      <p>
+        This section is reserved for additional analysis and interpretation.
+        Future content may include deeper qualitative observations,
+        comparative visual examples, or extended discussion on failure modes
+        and class-specific sensitivities.
+      </p>
+    </div>
+
   
-
-<section class="section">
-<div class="container is-max-desktop">
-  <div class="columns is-centered">
-
-    <!-- Feature A -->
-    <div class="column">
-      <div class="content">
-        <h2 class="title is-3 has-text-centered">Feature A</h2>
-        <p>
-          In this section, we introduce Feature A, a core component of the project that plays a pivotal role in achieving the overall goals. The importance of this feature stems from its ability to bridge critical gaps in existing workflows, deliver performance enhancements, and unlock new possibilities for visualization, analysis, or interactivity.
-        </p>
-        <!-- Optional media/image/video goes here -->
-        <!-- <img src="./static/images/featureA.png" alt="Feature A illustration"> -->
-      </div>
-    </div>
-    <!-- /Feature A -->
-
-    <!-- Feature B -->
-    <div class="column">
-      <div class="content">
-        <h2 class="title is-3 has-text-centered">Feature B</h2>
-        <p>
-          Feature B is also important. In this section, we introduce Feature B, another core component of the project that plays a pivotal role in achieving the overall goals. The importance of this feature stems from its ability to bridge critical gaps in existing workflows, deliver performance enhancements, and unlock new possibilities for visualization, analysis, or interactivity.
-        </p>
-        <!-- Optional media/image/video goes here -->
-        <!-- <img src="./static/images/featureB.png" alt="Feature B illustration"> -->
-      </div>
-    </div>
-    <!-- /Feature B -->
-
-  </div>
-</div>
-</section>
-
-<section class="section">
-  <div class="container is-max-desktop">
-<h2 class="title is-3 has-text-centered">Another Catchy Title for the Second Section</h2>
-    <figure class="image has-text-centered">
-      <img src="./static/images/waterfall_example.png" alt="Template bar illustration">
-<figcaption class="is-size-6 has-text-grey">
-  Figure 2. Waterfall chart, which shows the cumulative breakdown of changes (positive and negative) across different categories, illustrating how each step contributes to the final total.  
-</figcaption>
-    </figure>
+    <div style="margin-top: 2.5rem;"></div>
 
     <div class="content has-text-justified">
+      <h4 class="title is-5">Section B Observation</h4>
+
+      <div style="margin-top: 1.5rem;"></div>
+
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt lectus quis libero interdum, non facilisis sapien aliquet. Sed sit amet ex hendrerit, dignissim purus sit amet, blandit est. Integer nec mauris at dolor egestas volutpat. Quisque efficitur metus vitae dolor fermentum, quis varius neque consectetur. Curabitur suscipit urna ut felis vulputate, nec dictum orci vehicula. Mauris aliquet, nunc et dignissim tincidunt, urna est tempus lacus, ut suscipit ex tellus a ipsum. Donec pretium tempor justo vitae molestie. Fusce ullamcorper leo id purus sodales, at cursus felis lacinia. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+        Detailed observations related to Section B will be documented here.
+        This space is intentionally structured to allow seamless expansion
+        without disrupting the overall narrative or layout of the page.
       </p>
     </div>
+
   </div>
 </section>
 
-<section class="section">
-  <div class="container is-max-desktop">
-<h2 class="title is-3 has-text-centered">Another Catchy Title for the Third Section</h2>
-    <figure class="image has-text-centered">
-<div style="text-align: center;">
-  <img src="./static/images/P_05-playfair-1801-plate1.png"
-       alt="Playfair 1801 chart"
-       class="img-small75"
-       style="display: inline-block; width: 75%; height: auto;">
-</div>
-<figcaption class="is-size-6 has-text-grey">
-  Figure 3. William Playfair's 1801 'Chart of the Extent, Population and Revenue of the Principal Nations of Europe.' The central pie displays each nation's share of European land area, while red and yellow radial bars show, respectively, population size and annual government revenue. First printed in <em>The Statistical Breviary</em>, it is widely regarded as the earliest known multi-slice pie chart and highlights the contrast between territorial extent, demographic weight, and fiscal power.
-</figcaption>
-
-    </figure>
-
-    <div class="content has-text-justified">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt lectus quis libero interdum, non facilisis sapien aliquet. Sed sit amet ex hendrerit, dignissim purus sit amet, blandit est. Integer nec mauris at dolor egestas volutpat. Quisque efficitur metus vitae dolor fermentum, quis varius neque consectetur. Curabitur suscipit urna ut felis vulputate, nec dictum orci vehicula. Mauris aliquet, nunc et dignissim tincidunt, urna est tempus lacus, ut suscipit ex tellus a ipsum. Donec pretium tempor justo vitae molestie. Fusce ullamcorper leo id purus sodales, at cursus felis lacinia. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-      </p>
-    </div>
-  </div>
-</section>
-
-<section class="section">
-  <div class="container is-max-desktop">
-    <h2 class="title is-3 has-text-centered">Outro</h2>
-    <div class="content">
-      <p>
-        This is the last section. In this part, we bring together all the ideas explored throughout the project, reflecting on what was learned, what worked well, and what challenges emerged. We revisit the core objectives, summarizing how each was addressed, and highlight the most significant insights that have arisen from the work. Moreover, we outline how the outcomes contribute to the broader field, what implications they may have for future research or real-world applications, and why these findings matter. In addition, this section proposes concrete next steps: further experiments, methods refinement, validation on new datasets, collaborative extensions, or deployment scenarios. We also discuss potential limitations, acknowledge open questions, and suggest areas that merit deeper investigation.
-      </p>
-    </div>
-  </div>
-</section>
 
   <section class="section">
   <div class="container is-max-desktop">
