--- a/index.html
+++ b/index.html
@@ -188,16 +188,20 @@
 
   <div style="margin-top: 2.0rem;"></div>
 
-    <div class="column is-6 has-text-centered">
+<div class="columns is-centered">
+  <div class="column is-8 has-text-centered">
     <figure class="image">
-      <img src="./static/images/augprofile.png" alt="Figure B2" style="border-radius: 8px;">
+      <img src="./static/images/augprofile.png"
+           style="width: 70%; height: auto; border-radius: 8px;">
       <figcaption class="is-size-6 has-text-grey" style="margin-top: 0.75rem;">
-        Augmentation sensitivity–robustness profiles (positive = robust, negative = sensitive).
+        Figure B1. Augmentation sensitivity–robustness profiles.
       </figcaption>
     </figure>
   </div>
 </div>
 
+
+  
   <h5 class="title is-5">2. Particle Insights</h5>
   <p>
     Based on the Net Scores and sensitivity patterns, we categorized the particles to infer their physical characteristics:
