--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       <img src="./static/images/augprofile.png"
            style="width: 70%; height: auto; border-radius: 8px;">
       <figcaption class="is-size-6 has-text-grey" style="margin-top: 0.75rem;">
-        Figure B1. Augmentation sensitivity–robustness profiles.
+        Figure 2. Augmentation sensitivity–robustness profiles.
       </figcaption>
     </figure>
   </div>
