--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
   <div class="column is-8 has-text-centered">
     <figure class="image">
       <img src="./static/images/augprofile.png"
-           style="width: 70%; height: auto; border-radius: 8px;">
+           style="width: 150%; height: auto; border-radius: 8px;">
       <figcaption class="is-size-6 has-text-grey" style="margin-top: 0.75rem;">
-        Figure 2. Augmentation sensitivity–robustness profiles.
+        Figure 2. Augmentation sensitivity–robustness profiles (positive = robust, negative = sensitive).
       </figcaption>
     </figure>
   </div>
