--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
        style="width: 70%; height: auto;">
 
   <figcaption class="is-size-6 has-text-grey" style="margin-top: 0.75rem;">
-    Figure 1: This heatmap illustrates the percentages of correct classifications for the ten protein particle classes (mAb1–mAb10) achieved in the best test set.
+    Figure 1. This heatmap illustrates the percentages of correct classifications for the ten protein particle classes (mAb1–mAb10) achieved in the best test set.
   </figcaption>
 </figure>
 
