--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
   <div style="margin-top: 2.0rem;"></div>
 
 <div class="columns is-centered">
-  <div class="column is-8 has-text-centered">
+  <div class="column is-10 has-text-centered">
     <figure class="image">
       <img src="./static/images/augprofile.png"
-           style="width: 700%; height: auto; border-radius: 8px;">
+           style="width: 100%; max-width: none; height: auto; border-radius: 8px;">
       <figcaption class="is-size-6 has-text-grey" style="margin-top: 0.75rem;">
         Figure 2. Augmentation sensitivity–robustness profiles (positive = robust, negative = sensitive).
       </figcaption>
