--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
     <div style="margin-top: 4.0rem;"></div>
 
 <div class="content has-text-justified readable-content">
-  <h4 class="title is-4 has-text-centered">Section B: Factors Influencing FIM Classification &amp; Particle Insights</h4>
+  <h4 class="title is-4 has-text-centered">Factors Influencing FIM Classification &amp; Particle Insights</h4>
 
   <div style="margin-top: 1.5rem;"></div>
 
-  <h5 class="title is-5">1. Augmentation Sensitivity-Robustness Profiling</h5>
+  <h5 class="title is-5">Augmentation Sensitivity-Robustness Profiling</h5>
   <p>
     We evaluated classification stability across 10 mAb categories using seven image transformations.
     The <strong>Net Score</strong> (Fig. B1) quantifies this stability: positive values indicate robustness (insensitivity),
@@ -202,7 +202,7 @@
 
 
   
-  <h5 class="title is-5">2. Particle Insights</h5>
+  <h5 class="title is-5">Particle Insights</h5>
   <p>
     Based on the Net Scores and sensitivity patterns, we categorized the particles to infer their physical characteristics:
   </p>
@@ -239,7 +239,7 @@
 
   <div style="margin-top: 2.0rem;"></div>
 
-  <h5 class="title is-5">3. Conclusion</h5>
+  <h5 class="title is-5">Conclusion</h5>
   <p>
     The analysis reveals that while the model achieves high reliability for particles with distinct morphological "fingerprints"
     (<strong>mAb1, 3, 5</strong>), it remains vulnerable to Flip and Luminance transformations in less distinct categories.
