--- a/index.html
+++ b/index.html
@@ -46,12 +46,17 @@
 <section class="section">
   <div class="container is-max-desktop">
 
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">Abstract</h2>
-        <div class="content has-text-justified">
-          <p> This project focuses on understanding and optimizing model behavior for protein particle classification through systematic experimentation. Instead of treating performance as a single numeric outcome, we emphasize comparative trends across training configurations and particle classes to better understand how model decisions emerge. </p>
-        </div>
+    <div class="content has-text-justified">
+  <p>
+    This project investigates how training choices shape model behavior in Flow Imaging Microscopy (FIM)-based protein particle classification.
+    Rather than treating performance as a single score, we compare trends across experimental configurations and particle classes to identify what the model reliably uses as evidence.
+  </p>
+  <p>
+    By combining class-wise metrics with qualitative visualizations (e.g., confusion heatmaps), we highlight stable strengths, persistent failure modes, and augmentation-sensitive classes.
+    These results guide practical decisions for improving robustness and provide interpretable insights into which particle attributes (shape, texture, scale, context) drive classification.
+  </p>
+</div>
+
       </div>
     </div>
   </div>
