--- a/index.html
+++ b/index.html
@@ -280,31 +280,38 @@
 </section>
 
 
-<footer class='footer footer-compact'>
+<footer class="footer footer-compact">
   <div class="container">
-    <div class="content has-text-centered">
+    <div class="content has-text-centered is-size-6">
+
       <p>
-        This website was created as coursework for <strong>CDS 301 / 501: Scientific Information and Data Visualization (Fall 2025) at George Mason Korea</strong>.
+        <strong>FIM Classification Analysis</strong><br>
+        Robustness and particle-level insights from Flow Imaging Microscopy
       </p>
-      <p>
-        This website is licensed under a
-        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-          Creative Commons Attribution-ShareAlike 4.0 International License
-        </a>.
+
+      <p style="margin-top: 0.75rem;">
+        Research conducted at<br>
+        <strong>Ghent University Global Campus (GUGC)</strong><br>
+        Research Center 4 (RC4): <em>Center for Biosystems and Biotech Data Science</em>
       </p>
-      <p>
-        Template design is based on the example site available at
-        <a href="https://utkuozbulak.github.io/cds_301_template_website/" target="_blank" rel="noopener">
+
+      <p style="margin-top: 0.75rem; font-size: 0.85rem; color: rgba(10,10,10,0.55);">
+        Page template adapted from
+        <a href="https://utkuozbulak.github.io/cds_301_template_website/"
+           target="_blank" rel="noopener">
           CDS 301 Template Website
-        </a>,
-        which itself uses a layout from the
-        <a href="https://github.com/nerfies/nerfies.github.io" target="_blank" rel="noopener">
+        </a>
+        and the
+        <a href="https://github.com/nerfies/nerfies.github.io"
+           target="_blank" rel="noopener">
           Nerfies project site
         </a>.
       </p>
+
     </div>
   </div>
 </footer>
+
 
 </body>
 </html>
