--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
       <p>
         <strong>FIM Classification Analysis</strong><br>
-        Robustness and particle-level insights from Flow Imaging Microscopy
+        Model training and augmentation-driven analysis for robust FIM protein particle classification
       </p>
 
       <p style="margin-top: 0.75rem;">
