--- a/index.html
+++ b/index.html
@@ -280,22 +280,28 @@
 </section>
 
 
-<footer class="footer footer-compact">
+<footer class="footer footer-compact custom-footer">
   <div class="container">
     <div class="content has-text-centered is-size-6">
 
-      <p>
-        <strong>FIM Classification Analysis</strong><br>
-        Model training and augmentation-based analysis for robust and interpretable FIM protein particle classification
+      <p class="footer-title">
+        <strong>FIM Classification Analysis</strong>
       </p>
 
-      <p style="margin-top: 0.75rem;">
+      <p class="footer-subtitle">
+        Model training and augmentation-based analysis for robust and interpretable
+        FIM protein particle classification
+      </p>
+
+      <div class="footer-divider"></div>
+
+      <p class="footer-affiliation">
         Research conducted at<br>
         <strong>Ghent University Global Campus (GUGC)</strong><br>
         Research Center 4 (RC4): <em>Center for Biosystems and Biotech Data Science</em>
       </p>
 
-      <p style="margin-top: 0.75rem; font-size: 0.85rem; color: rgba(10,10,10,0.55);">
+      <p class="footer-credit">
         Page template adapted from
         <a href="https://utkuozbulak.github.io/cds_301_template_website/"
            target="_blank" rel="noopener">
@@ -311,6 +317,7 @@
     </div>
   </div>
 </footer>
+
 
 
 </body>
